[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/fragment_forge/cards/ShaderCardFront.gd" type="Script" id=1]
[ext_resource path="res://assets/images/Difios.jpeg" type="Texture" id=2]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/fragment_forge/cards/CardFrontRequirements.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/fragment_forge/cards/CardFrontValue.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/fragment_forge/cards/CardFrontHeader.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=2]
size = 10
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 2
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 13
outline_size = 2
outline_color = Color( 0.243137, 0.243137, 0.243137, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[node name="Front" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1550.0
margin_bottom = -660.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArtLayout" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArtMargin" type="MarginContainer" parent="ArtLayout"]
margin_right = 150.0
margin_bottom = 150.0
mouse_filter = 2

[node name="CC" type="CenterContainer" parent="ArtLayout/ArtMargin"]
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
mouse_filter = 2

[node name="Art" type="TextureRect" parent="ArtLayout/ArtMargin/CC"]
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
mouse_filter = 2
texture = ExtResource( 2 )
expand = true

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 150, 240 )
mouse_filter = 2
custom_constants/margin_left = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardText" type="VBoxContainer" parent="Margin"]
margin_right = 150.0
margin_bottom = 240.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" parent="Margin/CardText" instance=ExtResource( 6 )]

[node name="Type" type="Label" parent="Margin/CardText"]
margin_top = 23.0
margin_right = 150.0
margin_bottom = 36.0
rect_min_size = Vector2( 50, 13 )
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
text = "Type"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="Requirements" parent="Margin/CardText" instance=ExtResource( 4 )]
margin_bottom = 93.0

[node name="VBC" parent="Margin/CardText/Requirements" index="0"]
margin_bottom = 53.0

[node name="VBoxContainer" type="VBoxContainer" parent="Margin/CardText/Requirements"]
margin_left = 33.0
margin_right = 143.0
margin_bottom = 53.0
mouse_filter = 2

[node name="Tags" type="Label" parent="Margin/CardText/Requirements/VBoxContainer"]
margin_right = 110.0
margin_bottom = 53.0
rect_min_size = Vector2( 110, 53 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Tag1 - Tag2"
align = 2
autowrap = true
uppercase = true

[node name="Margin" type="Control" parent="Margin/CardText/Requirements"]
margin_left = 147.0
margin_right = 150.0
margin_bottom = 53.0
rect_min_size = Vector2( 3, 0 )

[node name="Abilities" type="Label" parent="Margin/CardText"]
margin_top = 97.0
margin_right = 150.0
margin_bottom = 240.0
rect_min_size = Vector2( 146, 100 )
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "Text"
align = 1
valign = 1
autowrap = true

[node name="ValueContainer" parent="Margin" instance=ExtResource( 5 )]
margin_bottom = 240.0

[editable path="Margin/CardText/Requirements"]
